maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:52: error: ':' expected but ',' found.
def isMarked(x, y):Boolean = {
              ^JediEscaper:61: error: identifier expected but '}' found.
}
^