maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
 var (xStart, yStart):(Int, Int) = (0, 0)
 var x = xStart
 var y = yStart
 var width = getWorldWidth()
 var height = getWorldHeight()
  
 for (i <- 0 to width  - 1){
   for (j <- 0 to height - 1){
     if (hasBaggle(i, j)){
      	xStart = i
       	yStart = j
     }
   }
 }
  
 setIndication(xStart, yStart, 0)
  
 for (i <- 1 to (width*height) - 1){
   
   //down or right
   if (hasTopWall(x, y) &&  hasLeftWall(x,y) && !isMarked(x, y + 1)){
     y = y + 1
   }else{
     x = x + 1
   }
   
   //top or right
   if (!hasTopWall(x, y) && hasLeftWall(x,y) && !isMarked(x, y - 1)){
     y = y - 1
   }else{
     x = x + 1
   }
   
   //
   if (!hasTopWall(x, y) && !hasLeftWall(x, y)){
     if (isMarked(x, y - 1)){
       x = x - 1
     }else{
       y = y - 1
     }
   }
	
   
 	setIndication(x, y, i)
 }
  
}      


def isMarked(x, y):Boolean = {
  return getIndication(x, y) == 9999
}